refactor: improve code quality service layers